--- a/src/app/components/patient-composition-item/patient-composition-item.component.css
+++ b/src/app/components/patient-composition-item/patient-composition-item.component.css
@@ -1,5 +1,6 @@
-.goce{
-  background-color: #f5f5f5;
-  /*box-shadow: 0 1px rgba(0, 0, 0, .4)*/
-}
+/*.siv{*/
+  /*background-color: #f5f5f5;*/
+  /*!*box-shadow: 0 1px rgba(0, 0, 0, .4)*!*/
+/*}*/
 summary::-webkit-details-marker {display: none;} /*ova e za da nema strelka*/
+
