--- a/src/app/components/patient-composition-item/patient-composition-item.component.html
+++ b/src/app/components/patient-composition-item/patient-composition-item.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let item of items, let i = index " class="goce">
+<div *ngFor="let item of items, let i = index " class="siv">
   <details open>
     <summary>
     <app-patient-presentation-item [item]="item"></app-patient-presentation-item>
