--- a/src/app/components/patient-presentation-item/patient-presentation-item.component.html
+++ b/src/app/components/patient-presentation-item/patient-presentation-item.component.html
@@ -1,5 +1,8 @@
 <div [ngSwitch]="item.displayValue">
-  <div *ngSwitchCase="" class="form-header">{{item.label}}</div>
+  <div *ngSwitchCase="" class="form-header">
+    <i class="fa fa-angle-down" aria-hidden="true"></i>
+    {{item.label}}
+  </div>
   <div *ngSwitchDefault>
     <div [ngSwitch]="item.rmType">
       <ul>
@@ -14,21 +17,3 @@
   </div>
 </div>
 
-
-
-
-<!--<div [ngSwitch]="item.rmType">-->
-<!--<ul>-->
-<!--<div *ngSwitchCase="'DV_DATE_TIME'">{{item.label}}: {{item.displayValue | date: 'dd-MM-yyyy HH:mm'}}</div>-->
-<!--</ul>-->
-<!--<div *ngSwitchDefault>-->
-<!--<div [ngSwitch]="item.displayValue">-->
-<!--<div *ngSwitchCase="">{{item.label}}</div>-->
-<!--<ul>-->
-<!--<div *ngSwitchDefault>{{item.label}}: {{item.displayValue}}</div>-->
-<!--</ul>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-
-<!--{{item.rmType}}-->
