--- a/src/app/components/patient-timeline/patient-timeline.component.css
+++ b/src/app/components/patient-timeline/patient-timeline.component.css
@@ -1,66 +1,75 @@
-.timelineDate{
+.timelineDate {
   font-size: 0.8em;
   color: #BDC3C7;
   display: block;
+  text-align: right;
 }
-.timelineMM{
+
+.timelineMM {
   font-size: 1.2em;
   color: #2980B9;
   font-weight: 300;
-
+  display: block;
+  text-align: right;
 }
 
 /*ikona za isklucuvajne X*/
-.glyphicon{
+.glyphicon {
   cursor: pointer;
-  float:right;
+  float: right;
   color: white;
   font-size: 20px;
   font-weight: bold;
 }
 
 /*grafikoni*/
-.panel{
+.panel {
   border: none;
   background-color: white;
   border-radius: 4px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
-.panel-title{
+
+.panel-title {
   font-size: 22px;
   font-weight: 300;
 }
-
 
 .panel-heading {
   padding: 15px 15px;
   border-bottom: 1px solid transparent;
 }
+
 .panel-danger > .panel-heading {
   color: white;
   background-color: #da4453;
   border-color: #da4453;
 }
+
 .panel-success > .panel-heading {
   color: white;
   background-color: #8cc152;
   border-color: #8cc152;
 }
+
 .panel-primary > .panel-heading {
   color: white;
   background-color: #3bafda;
   border-color: #3bafda;
 }
+
 .panel-info > .panel-heading {
   color: white;
   background-color: #37bc9b;
   border-color: #37bc9b;
 }
+
 .panel-warning > .panel-heading {
   color: white;
   background-color: #f6bb42;
   border-color: #f6bb42;
 }
+
 /*podatocite pod grafikonot*/
 .panel-footer {
   color: white;
@@ -72,48 +81,55 @@
   display: block;
 }
 
-p{
+p {
   color: #999;
   font-size: 13px;
 }
-span{
+
+span {
   color: #434a54;
   font-size: 13px;
 }
 
-
-.blodpresure{
+.blodpresure {
   color: #DA4453;
   font-size: 22px;
 
 }
-.bodytemperature{
+
+.bodytemperature {
   color: #F6BB42;
   font-size: 22px;
 
 }
-.height{
+
+.height {
   color: #37BC9B;
   font-size: 22px;
 
 }
-.pulse{
+
+.pulse {
   color: #8CC152;
   font-size: 22px;
 
 }
-.weight{
+
+.weight {
   color: #3BAFDA;
   font-size: 22px;
 }
+
 .scroll {
   height: 370px;
   overflow: auto;
   padding: 15px
 }
-.list-group-item{
+
+.list-group-item {
   background-color: #dcdfe3;
 }
+
 .timeline-icon {
   width: 40px;
   height: 40px;
@@ -143,35 +159,62 @@ span{
 }
 
 /*Timeline otvoranjeto*/
-summary {cursor: pointer; padding: 15px 0; width: 100%; background-color: #dcdfe3; border-radius: 2px}
-summary:hover, details[open] summary {background: #3498DB; color: #fff;}
-summary::-webkit-details-marker {display: none;} /*ova e za da nema strelka*/
-details[open] {box-shadow: 0 1px 1px rgba(0, 0, 0, .4)}
+summary {
+  cursor: pointer;
+  padding: 15px 0;
+  width: 100%;
+  background-color: #dcdfe3;
+  border-radius: 2px;
+}
+
+summary:hover, details[open] summary {
+  background: #3498DB;
+  color: #fff;
+}
+
+summary::-webkit-details-marker {
+  display: none;
+}
+
+/*ova e za da nema strelka*/
+details[open] {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .4)
+}
 
 /* Applies a grabbing hand on top of the div that's draggable*/
 .cursor-draggable {
   cursor: grab;
-  /*cursor: -moz-grab;*/
-  /*cursor: -webkit-grab;*/
 }
 /*  Apply a "closed-hand" cursor during drag operation. */
 .cursor-draggable:active {
   cursor: grabbing;
-  /*cursor: -moz-grabbing;*/
-  /*cursor: -webkit-grabbing;*/
 }
 
 @media only screen and (max-width: 1199px) {
+  /*centriranje na linija pod slikcinata pri namaluvanje*/
   .timeline:before {
     left: -5%;
   }
 }
 
+
 @media only screen and (max-width: 991px) {
-.tekst{
-  text-align: left;
-}
-  .slika{
-    text-align: right;
+  /*podesuvanje na datumot i slikcinata pri mobile view*/
+  .datum {
+    float: left;
+  }
+  .timelineDate {
+    text-align: left;
+  }
+  .timelineMM {
+    text-align: left;
+  }
+  .slika {
+    margin-left: 92%;
+    margin-bottom: 10px;
+  }
+  .timeline:before {
+    position: relative;
   }
 }
+
