--- a/src/app/components/patient-info/patient-info.component.html
+++ b/src/app/components/patient-info/patient-info.component.html
@@ -15,7 +15,7 @@
       </div>
 
 
-      <div class="col-md-3">
+      <div class="col-md-3; border">
         <p>Healthcare team:</p>
         <img src="https://dev.ehrscape.com/demo/img/doctor2.png" alt="nemat slika" class="img-circle">
       </div>
