--- a/src/app/components/patient-timeline/patient-timeline.component.html
+++ b/src/app/components/patient-timeline/patient-timeline.component.html
@@ -28,20 +28,28 @@
               <div *ngSwitchCase="'Vital Signs'" class="timeline-icon fa-plus-square"></div>
               <div *ngSwitchDefault class="timeline-icon fa-stethoscope"></div>
             </div>
+
           </div>
 
 
           <div class="col-md-8">
-            <div class="list-group" style="  background-color: #f5f5f5;">
+            <div class="boxx">
+              <!--<div class="box">-->
+                <!--<i class="fa fa-caret-left fa-2x"></i>-->
+              <!--</div>-->
 
-              <details>
-                <summary>
-                  <div style="margin-left: 10px">{{item.metadata.templateId}}{{' | ' + item.metadata.composer.name}}
-                  </div>
-                </summary>
-                <app-patient-composition-item [items]="item.composition.children"></app-patient-composition-item>
+              <div class="list-group" style="background-color: #f5f5f5; margin-left: 8px">
+                <details>
+                  <summary>
+                    <div class="left"><i class="fa fa-caret-left fa-2x"></i></div>
+                    <div class="up"><i class="fa fa-caret-up fa-2x"></i></div>
+                    <div style="margin-left: 10px">{{item.metadata.templateId}}{{' | ' + item.metadata.composer.name}}</div>
+                  </summary>
 
-              </details>
+                  <app-patient-composition-item [items]="item.composition.children"></app-patient-composition-item>
+
+                </details>
+              </div>
             </div>
             <ul class="timeline"></ul>
           </div>
@@ -85,7 +93,9 @@
           </div>
         </td>
         <td>
-          <div *ngIf="item.value < item.normal_max && item.value > item.normal_min" style="color: #8CC152">{{item.value}}</div>
+          <div *ngIf="item.value < item.normal_max && item.value > item.normal_min" style="color: #8CC152">
+            {{item.value}}
+          </div>
           <div *ngIf="item.value > item.normal_max" style="color: #DA4453">
             {{item.value}}
             <i class="fa fa-chevron-circle-up" aria-hidden="true"></i>
