--- a/src/app/components/patient-info/patient-info.component.html
+++ b/src/app/components/patient-info/patient-info.component.html
@@ -9,15 +9,22 @@
 
       <div class="col-md-6">
         <h4>{{patientService.userModel.firstNames}}{{patientService.userModel.lastNames}}</h4>
-        <p>Age: <span>{{patientService.userModel.age | number:'.0-1'}}</span></p>
+        <p>Age: <span>{{patientService.userModel.fullAge | slice:0:18}}</span></p>
         <p>Gender: <span>{{patientService.userModel.gender | lowercase}}</span></p>
         <p>DOB: <span>{{patientService.userModel.dateOfBirth | date:'MMM.dd,yyyy'}}</span></p>
+        <p>Address: <span>-</span></p>
+
       </div>
 
+      <div class="col-md-3">
+        <div class="ver-spacer left">
+          <div class="mask"></div>
+        </div>
+        <div class="border">
+          <p>Healthcare team:</p>
+          <img class="doc-pic">
+        </div>
 
-      <div class="col-md-3; border">
-        <p>Healthcare team:</p>
-        <img src="https://dev.ehrscape.com/demo/img/doctor2.png" alt="nemat slika" class="img-circle">
       </div>
     </div>
   </div>
