--- a/src/app/components/patient-composition-item/patient-composition-item.component.css
+++ b/src/app/components/patient-composition-item/patient-composition-item.component.css
@@ -13,3 +13,8 @@ summary{
 details[open] .test{
   color: #db090f
 }
+
+details[open] > div{
+  animation-name: growAndFadeInFontSize;
+  animation-duration: 500ms;
+}
