--- a/src/app/components/patient-history/patient-history.component.css
+++ b/src/app/components/patient-history/patient-history.component.css
@@ -8,8 +8,39 @@ h3{
   line-height: 30px;
   color: #5d5d5d;
 }
+.panel-default > .panel-heading {
+  color: #434a54;
+  background-color: #e6e9ed;
+  border-color: #e6e9ed;
+}
 
 
-#main:hover ~ .box {
-  background-color: green;
+
+details{
+  /*position: relative;*/
+  /*width: 100px;height: 100px;*/
+  /*perspective: 1000px;*/
+}
+div{
+  /*position: absolute;*/
+  /*top: 20px;*/
+  /*width: 100px;height: 100px;*/
+  /*background: black;*/
+}
+details .transition{
+  transition: 1s linear;
+  transform-origin: center bottom;
+}
+
+summary .transition{
+  transition: 1s linear;
+  transform-origin: center bottom;
+}
+summary:hover, details[open] summary{
+  transform: rotateX(360deg);
+  background: orangered;
+}
+details[open] .transition{
+  transform: rotateX(360deg);
+  background: orangered;
 }
