--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,7 @@
         <app-patient-history></app-patient-history>
       </div>
     </div>
+    <a href="#top" id="smoothscroll" title="Back to top" style="display: inline;"></a>
   </div>
 </div>
 
