--- a/src/app/components/patient-info/patient-info.component.html
+++ b/src/app/components/patient-info/patient-info.component.html
@@ -3,8 +3,8 @@
     <div class="row; center">
 
       <div class="col-md-3" align="center">
-        <img (mouseover)="onMouseOver()" (mouseout)="onMouseOut()" src="https://dev.ehrscape.com/demo/img/female.png"
-             alt="nemat slika" [class]="class" style="border: 3px solid #ececec">
+        <img class="patient-pic" src="https://dev.ehrscape.com/demo/img/female.png"
+             alt="nemat slika">
       </div>
 
       <div class="col-md-6">
