--- a/src/app/components/patient-timeline/patient-timeline.component.html
+++ b/src/app/components/patient-timeline/patient-timeline.component.html
@@ -229,7 +229,7 @@
 </div>
 
 <!--Weight-->
-<div [ng2-draggable]="true" class="col-md-6" #Weight (mousedown)="onTop(Weight)">
+<div [ng2-draggable]="true" class="col-md-6" id="Weight" #Weight (mousedown)="onTop(Weight)">
   <div class="panel panel-primary">
     <div class="panel-heading">
       <span class="glyphicon glyphicon-remove" (click)="hideContent(Weight)"></span>
